<resources>
    <string name="app_name">CashRegister_LY</string>
    <string name="notInStock">Not enough products in stock</string>
    <string name="selected_product">Selected product: \n</string>
    <string name="you_are_purchasing">Selected amount: \t</string>
    <string name="your_total">Total:\n</string>
    <string name="_5">5</string>
    <string name="clear">C</string>
    <string name="buy">BUY</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
</resources>